Fixed broken css rule

--- a/assets/scss/base/_headings.scss
+++ b/assets/scss/base/_headings.scss
@@ -89,7 +89,6 @@ article h4 {
 h1,
 .alpha {
 	@include font-size(41);
-	line-height:
 	margin-bottom: .65em;
 
 	@include mq(M) {
